--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "efficient-kan-master"]
-	path = efficient-kan-master
+[submodule "efficientkan"]
+	path = efficientkan
 	url = https://github.com/Blealtan/efficient-kan
